base/services/allure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allure-deployment
  labels:
    app: allure-report
spec:
  template:
    metadata:
      name: allure-container
      labels:
        type: app
    spec:
      # serviceAccountName: allure-report
      tolerations:
        - effect: NoSchedule
          key: pool
          operator: Equal
          value: infra
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        # allowPrivilegeEscalation: false
      containers:
        - name: allure
          image: '000000000000.dkr.ecr.us-east-1.amazonaws.com/allure/api:1.0'
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
          volumeMounts:
            - name: reports-volume
              mountPath: /app/projects
        - name: allure-ui
          #image: '000000000000.dkr.ecr.us-east-1.amazonaws.com/allure/ui:latest'
          image: 'frankescobar/allure-docker-service-ui'
          imagePullPolicy: Always
          ports:
            - containerPort: 5252
      volumes:
        - name: reports-volume
          persistentVolumeClaim:
            claimName: allure-persistent-volume-claim
  replicas: 1
  selector:
    matchLabels:
      type: app
