base/services/allure/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: allure-service-load-balancer
spec:
  type: ClusterIP  #LoadBalancer
  ports:
    - name: allure-api
      port: 6060
      targetPort: 5050
    - name: allure-ui
      port: 7070
      targetPort: 5252
  selector:
    type: app
