base/services/allure/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allure
  annotations:
    #https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md#custom-max-body-size
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    #https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md#rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${public_ingress_controller_certs}
spec:
  ingressClassName: public-shared
  #tls:
  #  - secretName: my-domain-com-tls
  #    hosts:
  #      - my-domain.com
  rules:
    - host: tests.${env_dns_zone_name}
      http:
        paths:
          - path: /allure-api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: allure-service-load-balancer
                port:
                  number: 6060
          - path: /allure-ui/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: allure-service-load-balancer
                port:
                  number: 7070
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: allure-service-load-balancer
                port:
                  number: 7070
